service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: ssl-redirect
spec:
  ports:
    - name: use-annotation
      port: 80
      targetPort: 80
  type: ClusterIP
